Fix word wrap for quotes

--- a/porick/public/css/base.css
+++ b/porick/public/css/base.css
@@ -69,7 +69,7 @@ body {
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
-    word-break: none;
+    word-break: normal;
 
     padding: 0 !important;
     margin: 0 !important;
